--- a/Widgets/build.gradle
+++ b/Widgets/build.gradle
@@ -6,10 +6,11 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 dependencies {
-  compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
 }
 
 android {
@@ -22,12 +23,12 @@ android {
       }
   }
 
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 21
+        minSdkVersion 9
+        targetSdkVersion 25
     }
 }
 
