--- a/Widgets/build.gradle
+++ b/Widgets/build.gradle
@@ -24,7 +24,7 @@ android {
   }
 
     compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 9
